[package]
name = "merging-iterator"
version = "1.0.0"
authors = ["Valentin Brandl <mail@vbrandl.net>"]
description = "An iterator to return the elements of two independently ordered iterators in order"

repository = "https://github.com/vbrandl/merging-iterator"
documentation = "https://docs.rs/merging-iterator/"

readme = "README.md"
keywords = ["iterator", "sorted"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "vbrandl/merging-iterator" }

[dependencies]

[dev-dependencies]
proptest = "0.8.7"
